Add "Fifty Bird" game

--- a/src/CS50G/wwwroot/index.html
+++ b/src/CS50G/wwwroot/index.html
@@ -27,6 +27,7 @@
     <script src="Interop/Graphics.js"></script>
     <script src="Interop/Audio.js"></script>
     <script src="Interop/Keyboard.js"></script>
+    <script src="Interop/Mouse.js"></script>
 </body>
 
 </html>
